Setup project for local usage