@@ -8,15 +8,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 import pt.rodrigimix.invodata.config.AppConfig;
 import pt.rodrigimix.invodata.dto.InvoiceFileData;
-import pt.rodrigimix.invodata.security.encryption.UserKeyContext;
-import pt.rodrigimix.invodata.service.system.SystemSettingsService;
 
+import java.io.File;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Base64;
-import javax.crypto.SecretKey;
-import javax.crypto.spec.SecretKeySpec;
+import java.util.Arrays;
 
 @Service
 @ConditionalOnProperty(name = "invodata.storage.type", havingValue = "local", matchIfMissing = true)
@@ -24,28 +22,47 @@ public class LocalInvoiceFileStorage implements InvoiceFileStorage {
 
     private final Logger logger = LoggerFactory.getLogger(LocalInvoiceFileStorage.class);
     private final AppConfig appConfig;
-    private final SystemSettingsService settingsService;
 
-    public LocalInvoiceFileStorage(AppConfig appConfig, SystemSettingsService settingsService) {
+    public LocalInvoiceFileStorage(AppConfig appConfig) {
         this.appConfig = appConfig;
-        this.settingsService = settingsService;
     }
 
     @Override
-    public String save(String contentType, byte[] contents, InvoiceFilePathContext context) {
+    public String save(String contentType, byte[] contents, String preferredPath) {
         try {
-            String fileId = buildUniquePath(contentType, context);
-            Path targetPath = Path.of(resolveMediaPath(), fileId);
-            ensureDirectory(targetPath.getParent());
-            if (Files.exists(targetPath)) {
-                logger.warn("File already exists.");
-                return fileId;
+            String fallbackFileId = InvoiceFileId.build(contentType, contents);
+            String fileId = normalizeStorageKey(preferredPath, fallbackFileId);
+
+            Path rootPath = Paths.get(appConfig.getMedia_path()).toAbsolutePath().normalize();
+            if (!Files.exists(rootPath)) {
+                Files.createDirectories(rootPath);
+                logger.info("Created media directory.");
             }
-            byte[] toWrite = encryptIfConfigured(contents);
-            Files.write(targetPath, toWrite);
-            writeSecondaryCopy(fileId, contents);
-            logger.info("File saved.");
-            return fileId;
+
+            String currentFileId = fileId;
+            int collisionIndex = 1;
+            while (true) {
+                Path candidatePath = resolveStoragePath(rootPath, currentFileId);
+                Path parent = candidatePath.getParent();
+                if (parent != null && !Files.exists(parent)) {
+                    Files.createDirectories(parent);
+                }
+
+                File file = candidatePath.toFile();
+                if (!file.exists()) {
+                    Files.write(candidatePath, contents);
+                    logger.info("Ficheiro gravado com sucesso em: {}", candidatePath);
+                    return currentFileId;
+                }
+
+                byte[] existingBytes = Files.readAllBytes(candidatePath);
+                if (Arrays.equals(existingBytes, contents)) {
+                    logger.warn("File already exists.");
+                    return currentFileId;
+                }
+
+                currentFileId = withCollisionSuffix(fileId, collisionIndex++);
+            }
         } catch (Exception e) {
             logger.error("Failed to save file", e);
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Failed to save file.");
@@ -53,46 +70,18 @@ public class LocalInvoiceFileStorage implements InvoiceFileStorage {
     }
 
     @Override
-    public String move(String fileId, InvoiceFilePathContext context) {
-        if (fileId == null || fileId.isBlank()) {
-            return fileId;
-        }
-        try {
-            String extension = InvoiceFilePathBuilder.extensionFromFilename(fileId);
-            String targetId = buildUniquePathFromExtension(extension, context);
-            if (targetId.equals(fileId)) {
-                return fileId;
-            }
-            movePath(Path.of(resolveMediaPath(), fileId), Path.of(resolveMediaPath(), targetId));
-            moveSecondaryCopy(fileId, targetId);
-            return targetId;
-        } catch (Exception e) {
-            logger.warn("Failed to move file {}: {}", fileId, e.getMessage());
-            return fileId;
-        }
-    }
-
-    @Override
     public InvoiceFileData load(String fileId) {
-        Path path = Path.of(resolveMediaPath(), fileId);
+        Path path = Path.of(appConfig.getMedia_path(), fileId);
         if (!Files.exists(path)) {
-            Path fallback = resolveFallbackPath(fileId);
-            if (fallback == null) {
-                throw new ResponseStatusException(HttpStatus.NOT_FOUND, "File not found.");
-            }
-            path = fallback;
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "File not found.");
         }
         try {
             byte[] content = Files.readAllBytes(path);
-            content = decryptIfConfigured(content, path);
             String contentType = Files.probeContentType(path);
             if (contentType == null) {
-                contentType = inferContentType(fileId);
+                contentType = "application/octet-stream";
             }
-            String filename = Path.of(fileId).getFileName().toString();
-            return new InvoiceFileData(content, filename, contentType);
-        } catch (pt.rodrigimix.invodata.security.encryption.MissingUserKeyException e) {
-            throw e;
+            return new InvoiceFileData(content, path.getFileName().toString(), contentType);
         } catch (Exception e) {
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Failed to load file.");
         }
@@ -101,182 +90,49 @@ public class LocalInvoiceFileStorage implements InvoiceFileStorage {
     @Override
     public void delete(String fileId) {
         try {
-            Path path = Path.of(resolveMediaPath(), fileId);
+            Path path = Path.of(appConfig.getMedia_path(), fileId);
             Files.deleteIfExists(path);
-            deleteSecondaryCopy(fileId);
         } catch (Exception ignored) {
             // Best-effort delete to avoid breaking request.
         }
     }
 
-    private byte[] encryptIfConfigured(byte[] contents) {
-        SecretKey key = resolveKey();
-        if (key == null) {
-            return contents;
+    private String normalizeStorageKey(String preferredPath, String fallbackFileId) {
+        if (preferredPath == null || preferredPath.isBlank()) {
+            return fallbackFileId;
         }
-        return InvoiceFileCrypto.encrypt(contents, key);
+        String normalized = preferredPath
+                .replace('\\', '/')
+                .replaceAll("^/+", "")
+                .replaceAll("/+", "/");
+        if (normalized.contains("..") || normalized.isBlank()) {
+            return fallbackFileId;
+        }
+        return normalized;
     }
 
-    private byte[] decryptIfConfigured(byte[] contents, Path path) {
-        SecretKey userKey = resolveKey();
-        if (userKey == null) {
-            return contents;
-        }
+    private Path resolveStoragePath(Path rootPath, String fileId) {
         try {
-            return InvoiceFileCrypto.decryptIfEncrypted(contents, userKey);
-        } catch (IllegalStateException ex) {
-            SecretKey legacyKey = resolveLegacyKey();
-            if (legacyKey == null) {
-                throw ex;
+            Path candidate = rootPath.resolve(fileId).normalize();
+            if (!candidate.startsWith(rootPath)) {
+                throw new IllegalArgumentException("Invalid storage path.");
             }
-            byte[] decrypted = InvoiceFileCrypto.decryptIfEncrypted(contents, legacyKey);
-            try {
-                byte[] rotated = InvoiceFileCrypto.encrypt(decrypted, userKey);
-                Files.write(path, rotated);
-            } catch (Exception ignored) {
-                // Best-effort rotation; keep serving decrypted bytes.
-            }
-            return decrypted;
-        }
-    }
-
-    private SecretKey resolveKey() {
-        if (!isEncryptionEnabled()) {
-            return null;
-        }
-        byte[] keyBytes = UserKeyContext.requireKey();
-        return new SecretKeySpec(keyBytes, "AES");
-    }
-
-    private SecretKey resolveLegacyKey() {
-        String legacy = appConfig.getStorageEncryptionKey();
-        if (legacy == null || legacy.isBlank()) {
-            return null;
-        }
-        byte[] decoded = Base64.getDecoder().decode(legacy.trim());
-        if (decoded.length != 32) {
-            throw new IllegalStateException("Invalid legacy storage key length.");
-        }
-        return new SecretKeySpec(decoded, "AES");
-    }
-
-    private String inferContentType(String fileId) {
-        if (fileId == null) {
-            return "application/octet-stream";
-        }
-        String lower = fileId.toLowerCase();
-        if (lower.endsWith(".pdf")) {
-            return "application/pdf";
-        }
-        if (lower.endsWith(".jpg") || lower.endsWith(".jpeg")) {
-            return "image/jpeg";
-        }
-        if (lower.endsWith(".png")) {
-            return "image/png";
-        }
-        return "application/octet-stream";
-    }
-
-    private String resolveMediaPath() {
-        return settingsService.resolveStorage().mediaPath();
-    }
-
-    private void ensureDirectory(Path path) throws Exception {
-        if (path == null) {
-            return;
-        }
-        if (!Files.exists(path)) {
-            Files.createDirectories(path);
-            logger.info("Created media directory.");
-        }
-    }
-
-    private void writeSecondaryCopy(String fileId, byte[] bytes) {
-        if (!"both".equals(settingsService.getStorageTarget())) {
-            return;
-        }
-        try {
-            Path nfsPath = Paths.get(settingsService.resolveNfsPath(), fileId);
-            ensureDirectory(nfsPath.getParent());
-            if (Files.exists(nfsPath)) {
-                return;
-            }
-            Files.write(nfsPath, bytes);
-        } catch (Exception ex) {
-            logger.warn("Failed to write secondary copy: {}", ex.getMessage());
-        }
-    }
-
-    private void moveSecondaryCopy(String fileId, String targetId) {
-        if (!"both".equals(settingsService.getStorageTarget())) {
-            return;
-        }
-        try {
-            Path source = Path.of(settingsService.resolveNfsPath(), fileId);
-            Path target = Path.of(settingsService.resolveNfsPath(), targetId);
-            movePath(source, target);
-        } catch (Exception ignored) {
-            // Best-effort move.
-        }
-    }
-
-    private Path resolveFallbackPath(String fileId) {
-        if (!"both".equals(settingsService.getStorageTarget())) {
-            return null;
-        }
-        Path nfsPath = Path.of(settingsService.resolveNfsPath(), fileId);
-        return Files.exists(nfsPath) ? nfsPath : null;
-    }
-
-    private void deleteSecondaryCopy(String fileId) {
-        if (!"both".equals(settingsService.getStorageTarget())) {
-            return;
-        }
-        try {
-            Path path = Path.of(settingsService.resolveNfsPath(), fileId);
-            Files.deleteIfExists(path);
-        } catch (Exception ignored) {
-            // Best-effort delete.
-        }
-    }
-
-    private String buildUniquePath(String contentType, InvoiceFilePathContext context) throws Exception {
-        String directory = InvoiceFilePathBuilder.buildDirectory(context);
-        String baseName = InvoiceFilePathBuilder.buildBaseName(context);
-        String extension = InvoiceFilePathBuilder.extensionFromMimeType(contentType);
-        return buildUniquePath(directory, baseName, extension);
-    }
-
-    private String buildUniquePathFromExtension(String extension, InvoiceFilePathContext context) throws Exception {
-        String directory = InvoiceFilePathBuilder.buildDirectory(context);
-        String baseName = InvoiceFilePathBuilder.buildBaseName(context);
-        return buildUniquePath(directory, baseName, extension);
-    }
-
-    private String buildUniquePath(String directory, String baseName, String extension) throws Exception {
-        String candidate = directory + "/" + baseName + extension;
-        Path root = Paths.get(resolveMediaPath());
-        if (!Files.exists(root.resolve(candidate))) {
             return candidate;
+        } catch (InvalidPathException ex) {
+            throw new IllegalArgumentException("Invalid storage path.", ex);
         }
-        for (int counter = 2; counter <= 999; counter++) {
-            String attempt = directory + "/" + baseName + "_" + counter + extension;
-            if (!Files.exists(root.resolve(attempt))) {
-                return attempt;
-            }
-        }
-        return directory + "/" + baseName + "_" + System.currentTimeMillis() + extension;
     }
 
-    private void movePath(Path source, Path target) throws Exception {
-        if (!Files.exists(source)) {
-            return;
+    private String withCollisionSuffix(String fileId, int index) {
+        int slash = fileId.lastIndexOf('/');
+        String directory = slash >= 0 ? fileId.substring(0, slash + 1) : "";
+        String name = slash >= 0 ? fileId.substring(slash + 1) : fileId;
+        int dot = name.lastIndexOf('.');
+        if (dot <= 0) {
+            return directory + name + "-" + index;
         }
-        ensureDirectory(target.getParent());
-        Files.move(source, target);
-    }
-
-    private boolean isEncryptionEnabled() {
-        return settingsService.resolveStorage().encryptionEnabled();
+        String base = name.substring(0, dot);
+        String ext = name.substring(dot);
+        return directory + base + "-" + index + ext;
     }
 }
